Bug 176499 - Present Windows effect for all desktops: Not working with only 1 window on other desktop
Summary: Present Windows effect for all desktops: Not working with only 1 window on ot...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-29 22:43 UTC by g111
Modified: 2008-11-30 16:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
Quick fix to present windows when there is only one window if it is not on the current desktop. (763 bytes, patch)
2008-11-30 00:43 UTC, David Nadlinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description g111 2008-11-29 22:43:39 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Say you have more than 1 desktop. Only one window is open on desktop 1, all other desktops are empty. You are on an empty desktop (e.g. desktop 2).

Now you try to open the Present Windows effect (for all desktops) and want to see the one window from desktop 1.

But the effect is not triggered. You do not see the window, so you think no windows are opened at all.

Bye,
Gert
Comment 1 David Nadlinger 2008-11-30 00:38:28 UTC
Changing the effect to behave like you suggest is rather trivial.

In my opinion it makes sense, but I would like to hear some other opinions before committing.
Comment 2 David Nadlinger 2008-11-30 00:43:09 UTC
Created attachment 28935 [details]
Quick fix to present windows when there is only one window if it is not on the current desktop.
Comment 3 lucas 2008-11-30 05:12:32 UTC
Patch is fine for commit.
Comment 4 g111 2008-11-30 09:48:06 UTC
Wow, this was fast! :)

Thank you,
Gert
Comment 5 lucas 2008-11-30 16:26:37 UTC
SVN commit 890861 by dnadlinger:

Present Windows when there is only one window if this window is not on the current desktop.

BUG: 176499


 M  +2 -1      presentwindows.cpp