Present Windows when there is only one window if this window is not on the current desktop.

BUG: 176499

svn path=/trunk/KDE/kdebase/workspace/; revision=890861